fix : 로그인 컨테이너 z-index 수정

--- a/web-app/css/header.css
+++ b/web-app/css/header.css
@@ -105,7 +105,7 @@
 
 .login-container {
     position: fixed;
-    z-index: 1;
+    z-index: 5;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.7);
